# lab-share-lib

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose-standalone.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: automated_release.yml  ci.yml
examples/: Dockerfile  Pipfile  README.md
examples/dependencies/: docker-compose.yml  rabbitmq_setup.sh  up.sh
examples/dependencies/schemas/: push_schemas.sh
examples/dependencies/schemas/example_1_message/: schema.avsc  schema.avsc.tmp
examples/example1/: README.md  config.py  consumer_example.py  processors.py  publisher_example.py
lab_share_lib/: config_readers.py  constants.py  exceptions.py  types.py
lab_share_lib/config/: processors.py  rabbit_config.py
lab_share_lib/processing/: base_processor.py  rabbit_message.py  rabbit_message_processor.py
lab_share_lib/rabbit/: async_consumer.py  avro_encoder.py  background_consumer.py  basic_publisher.py  rabbit_stack.py  schema_registry.py
tests/: conftest.py  constants.py  test_config_readers.py
tests/data/: binary_message.avro
tests/processing/: test_rabbit_message.py  test_rabbit_message_processor.py
tests/rabbit/: test_async_consumer.py  test_avro_encoder.py  test_background_consumer.py  test_basic_publisher.py  test_rabbit_stack.py  test_schema_registry.py
tests/rabbit/messages/: test_base_message.py
