[project]
name = "lab-share-lib"
version = "0.0.1"
authors = [
  { name="Stuart McHattie", email="sm49@sanger.ac.uk" },
]
maintainers = [
    { name="PSD", email="psd-help@sanger.ac.uk" },
]
description = "Library to allow building consumers to interact with lab-share framework created as part of the Heron handover OKR"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sanger/lab-share-lib"
"Bug Tracker" = "https://github.com/sanger/lab-share-lib/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = ".release_version"
pattern = "'b(?P<version>)'"


[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
source = ['lab_share_lib']
